--- a/geovisor_loginC.html
+++ b/geovisor_loginC.html
@@ -55,7 +55,8 @@
         <script src="geojson/barrios.js" type="text/javascript"></script>
         <script src="geojson/comunas.js" type="text/javascript" ></script>
         <script src="geojson/reportes.js" type="text/javascript" ></script>
-        
+        <script src="geojson/reportesA.js" type="text/javascript" ></script>
+        <script src="geojson/reportesC.js" type="text/javascript" ></script>
     </head>
 
     <body>
@@ -125,7 +126,7 @@
         {
             minZoom: 12,
             maxZoom: 18,
-        }).setView([3.410905799228057, -76.5297088494141], 10);
+        }).setView([3.410905799228057, -76.5297088494141], 15);
 
         // Definición de mapa base
         var Mapa_Base = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 
@@ -158,7 +159,7 @@
         var estilo = 
 		{
 			radius: 5,
-			fillColor: "blakc",
+			fillColor: "black",
 			color: "black",
 			weight: 1,
 			opacity: 1,
@@ -202,6 +203,104 @@
                 </table>',{permanent: false, className: 'labelstyle', 
             direction:'top', opacity: 1}).openTooltip()
         }, pointToLayer:function(feature, latlng) {return L.circleMarker(latlng, estilo)}}).addTo(map);
+
+        /// ----- OTRO
+        var estilo2 = 
+		{
+			radius: 5,
+			fillColor: "black",
+			color: "black",
+			weight: 1,
+			opacity: 1,
+			fillOpacity: 1,
+		};
+
+        var reportes2_cali = L.geoJSON(reportesA,{onEachFeature:function(feature, layer){
+            layer.bindTooltip('<table cellspacing="10" width="200">\
+                    <tr>\
+                        <th scope="row" align="left">ID REPORTE</th>\
+                        <td align="left" width="200">' + feature.properties.id + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">FECHA</th>\
+                        <td align="left" width="200">' + feature.properties.fecha + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">HORA</th>\
+                        <td align="left" width="200">' + feature.properties.hora + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">DIRECCIÓN</th>\
+                        <td align="left" width="200">' + feature.properties.direccion + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">DESCRIPCIÓN</th>\
+                        <td align="left" width="200">' + feature.properties.descripcio + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">LATITUD</th>\
+                        <td align="left" width="200">' + feature.properties.latitud_x + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">LONGITUD</th>\
+                        <td align="left" width="200">' + feature.properties.longitud_y + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">INTENSIDAD</th>\
+                        <td align="left" width="200">' + feature.properties.intensidad + '</td>\
+                    </tr>\
+                </table>',{permanent: false, className: 'labelstyle', 
+            direction:'top', opacity: 1}).openTooltip()
+        }, pointToLayer:function(feature, latlng) {return L.circleMarker(latlng, estilo2)}}).addTo(map);
+
+        /// ----- OTRO2
+        var estilo3 = 
+		{
+			radius: 5,
+			fillColor: "red",
+			color: "black",
+			weight: 1,
+			opacity: 1,
+			fillOpacity: 1,
+		};
+
+        var reportes3_cali = L.geoJSON(reportesC,{onEachFeature:function(feature, layer){
+            layer.bindTooltip('<table cellspacing="10" width="200">\
+                    <tr>\
+                        <th scope="row" align="left">ID REPORTE</th>\
+                        <td align="left" width="200">' + feature.properties.id + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">FECHA</th>\
+                        <td align="left" width="200">' + feature.properties.fecha + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">HORA</th>\
+                        <td align="left" width="200">' + feature.properties.hora + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">DIRECCIÓN</th>\
+                        <td align="left" width="200">' + feature.properties.direccion + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">DESCRIPCIÓN</th>\
+                        <td align="left" width="200">' + feature.properties.descripcio + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">LATITUD</th>\
+                        <td align="left" width="200">' + feature.properties.latitud_x + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">LONGITUD</th>\
+                        <td align="left" width="200">' + feature.properties.longitud_y + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row" align="left">INTENSIDAD</th>\
+                        <td align="left" width="200">' + feature.properties.intensidad + '</td>\
+                    </tr>\
+                </table>',{permanent: false, className: 'labelstyle', 
+            direction:'top', opacity: 1}).openTooltip()
+        }, pointToLayer:function(feature, latlng) {return L.circleMarker(latlng, estilo3)}}).addTo(map);
        
         // Se añade capa de suelos de protección agricola rural de la IDESC
         var perimetro_urbano = L.tileLayer.wms('http://ws-idesc.cali.gov.co:8081/geoserver/pot_2014/wms?service=WMS&version=1.1.0',
@@ -284,7 +383,7 @@
         L.easyButton('<img src="iconos/restart.png"  align="absmiddle" height="16px" >', function() 
             {
             alert('Se mostrará la VISTA PRINCIPAL del Geovisor.');
-            location.reload();
+            location.replace()
         }).addTo(map);
 
         var drawnItems = new L.FeatureGroup();
