--- a/indexA.html
+++ b/indexA.html
@@ -14,7 +14,7 @@
             <form>
                 <div class="login">
                     <div  >
-                        <a class="btn btn-light btn-lg" href="geovisor_invitado.html" onclick="alert('Ha accedido DIV-CALI como INVITADO!')">Invitado</a>
+                        <a class="btn btn-light btn-lg" href="geovisor_invitadoA.html" onclick="alert('Ha accedido DIV-CALI como INVITADO!')">Invitado</a>
                         o
                     </div>
                     <div>
