--- a/geovisor_loginB.html
+++ b/geovisor_loginB.html
@@ -66,10 +66,10 @@
             <a href="#openModal">
                 <button type="button" class = "botones"> NUEVO REPORTE </button>
             </a>
-    
-            <!--<a href="web.html">
-                <button type="button" class = "nuevo"> AÑADIR NUEVO ATRACTIVO </button>
-            </a> NO PUDE :c-->
+
+            <a href="index.html">
+                <button type="button" class = "botones2" onclick="alert('Regresará a la página de inicio de DIV-CALI!')"> VOLVER AL INICIO </button>
+            </a>  
 
             <div id="openModal" class="modalDialog">
                 <div>
